--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 body {
     background-size: cover;
-    background-image: url(img/cesar_enrriquez.JPG);
+    background-image: url("img/cesar_enrriquez.JPG");
     background-attachment: fixed;
     background-position: center center;
     background-color: #222;
