add image vignette

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Add your site or application content here -->
 <style>
-  h1 { font-family: 'Noto Serif', serif;
+  h1 {
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
     font-size: 2.6em;
@@ -34,7 +34,6 @@
 }
 
 #wrapper{
-    //background: red;
     display: block;
     margin: 0 auto;
     display: flex;
@@ -63,7 +62,7 @@
 
 body {
     background-size: cover;
-    background-image: url("img/cesar_enrriquez.JPG");
+    background-image: url("img/cesar_enrriquez.jpg");
     background-attachment: fixed;
     background-position: center center;
     background-color: #222;
