--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
     background-size: cover;
     background-image: url("img/cesar_enrriquez.jpg");
     background-attachment: fixed;
-    background-position: center center;
+    background-position: center top;
     background-color: #222;
 
 }
