--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   
@@ -25,12 +25,11 @@
   <!-- Add your site or application content here -->
 <style>
   h1 {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 300;
     font-size: 2.6em;
     margin: 0;
     line-height: 1em;
     letter-spacing: -1px;
+    font-weight: 300;
 }
 
 #wrapper{
@@ -51,14 +50,15 @@
     box-sizing: border-box;
     width: 100%;
 }
-#container a{color: white; font-weight: bold; text-decoration: none;}
 
 #content{
-    
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 300;
     max-width: 50%;
     min-width: 280px;
     color:white;
 }
+#content a{color: white; font-weight: 400; text-decoration: none;}
 
 body {
     background-size: cover;
