--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   
@@ -46,7 +46,7 @@
 #container{
     max-width: 60%;
     min-width: 320px;
-    padding: 20px;
+    padding: 15px;
     box-sizing: border-box;
     width: 100%;
 }
@@ -55,10 +55,10 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
     max-width: 50%;
-    min-width: 280px;
+    min-width: 290px;
     color:white;
 }
-#content a{color: white; font-weight: 400; text-decoration: none;}
+#content a{color: white; font-weight: 700; text-decoration: none;}
 
 body {
     background-size: cover;
@@ -77,7 +77,10 @@ body {
         <div id="content">
         <h1>Cesar Enrriquez</h1>
         
-        <p>Web and Media Specialist living in Newark, NJ. Developer at <a href="https://www.rlsmedia.com/">rlsmedia.com</a>. Helped launch <a href="https://www.facebook.com/RLSMetroBreakingNews">RLS Metro Breaking News</a>, RLS Media Camp, and <a href="https://metromediainstitute.com/">Metro Media Institute</a>.</p>
+        <p>Web and Media Specialist risiding in Newark, NJ.
+        Full-Stack Web Developer at <a href="https://www.rlsmedia.com/">rlsmedia.com</a>.
+        Helped launch <a href="https://www.facebook.com/RLSMetroBreakingNews">RLS Metro Breaking News</a>, <a href="https://www.rlsmedia.com/camp">RLS Media Camp</a>, and <a href="https://metromediainstitute.com/">Metro Media Institute</a>.</p>
+          <a href="tel:1-973-856-0740"></a><a href="mailto:&#109;&#97;&#105;&#108;&#64;&#99;&#101;&#115;&#97;&#114;&#101;&#110;&#114;&#114;&#105;&#113;&#117;&#101;&#122;&#46;&#99;&#111;&#109;">&#9993; &#109;&#97;&#105;&#108;&#64;&#99;&#101;&#115;&#97;&#114;&#101;&#110;&#114;&#114;&#105;&#113;&#117;&#101;&#122;&#46;&#99;&#111;&#109;</a>
       </div>
     </div>
   </div>
