--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
 #wrapper{
     display: block;
     margin: 0 auto;
-    display: flex;
     width:100%;
     height: 100%;
     position:absolute;
-    justify-content: center;
-    align-items: flex-end;
 }
 
 #container{
     max-width: 60%;
     min-width: 320px;
-    padding: 15px;
+    padding: 5%;
     box-sizing: border-box;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 #content{
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
     max-width: 50%;
-    min-width: 290px;
+    min-width: 288px;
     color:white;
 }
 #content a{color: white; font-weight: 700; text-decoration: none;}
