--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   
@@ -29,7 +29,7 @@
     margin: 0;
     line-height: 1em;
     letter-spacing: -1px;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 #wrapper{
@@ -53,12 +53,13 @@
 
 #content{
     font-family: 'Roboto Condensed', sans-serif;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
     font-weight: 300;
     max-width: 50%;
     min-width: 288px;
     color:white;
 }
-#content a{color: white; font-weight: 700; text-decoration: none;}
+#content a{color: white; font-weight: 400; text-decoration: none; border-bottom: 1px dotted white;}
 
 body {
     background-size: cover;
