--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.cesarenrriquez.com/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://www.cesarenrriquez.com/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="https://www.cesarenrriquez.com/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="https://www.cesarenrriquez.com/favicon-16x16.png" sizes="16x16" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
   <meta name="application-name" content="Cesar Enrriquez"/>
   <meta name="msapplication-TileColor" content="#111111" />
-  <meta name="msapplication-TileImage" content="https://www.cesarenrriquez.com/mstile-144x144.png" />
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png" />
   
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
